<resources>
    <string name="app_name">MarketPlace App</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="not_have_an_account_create_new">Not have an account, create new ..?</string>
    <string name="error_mobile_phone">Mobile Phone is required</string>
    <string name="error_password">"Password is required "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_confirm">Are you sure you want to log out ??</string>
    <string name="logout">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_category">Select a Category</string>
    <string name="categories">Categories</string>
    <string name="signup">Sign Up</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">E-mail (Optional)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="already_have_an_account_sign_in">Already have an account, Sign In?</string>
    <string name="verification">Verification</string>
    <string name="confirm_phone_number">Confirm Phone Number</string>
    <string name="we_have_sent_verification_code_to_the_phone_number">We have sent verification code to the phone number</string>
    <string name="verify">Verify</string>
    <string name="resendCode">Resend Code</string>
    <string name="resendCodeAfter">Resend Code after: %d</string>
    <string name="zero">0%s</string>
    <string name="cart">Cart</string>
    <string name="account">My Account</string>
    <string name="more">More…</string>
    <string name="sign_out">Sign out</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="notifications">Notifications</string>
    <string name="firstname_error">Firest name is required</string>
    <string name="lastname_error">Lastname is required</string>
    <string name="password_error">Password is required</string>
    <string name="confirm_password_error">Password confirmation is required</string>
    <string name="email_error">Error in E-mail entry</string>
    <string name="error_password_mismatch">Password mismatch</string>
    <string name="verify_customer_error">\"Error during verifying customer\"</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="error_mobile_phone_length">Mobile phone number shouldn\'t be more or less than 11 numbers</string>
    <string name="verification_code">Verification code</string>
    <string name="verification_code_error">Error during verifying code</string>
    <string name="network_connection_error">Something went wrong,Check your network connection and try again</string>
    <string name="error_loading_categories">Error during loading categories, Try again.. ?</string>
    <string name="error_loading_products">Error during loading products, Try again.. ?</string>
    <string name="no_categories_available">No categories are currently available</string>
    <string name="retry">Retry</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="no_products_available">No products are currently available</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password_success">Password reset successfully</string>
    <string name="error_password_reset">Error during password reset</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="error_current_password">Current Password is required</string>
    <string name="new_password_error">New Password entry is required</string>
    <string name="confirm_new_password_error">Password confirmation is required</string>
    <string name="edit_password_success">Password editted successfully</string>
    <string name="error_password_edit">Error during editting password</string>
    <string name="change_password">Change Password</string>
    <string name="error_loading_notifications">Error during loading notifications..try again?</string>
    <string name="no_notifications">No Notifications</string>
    <string name="product_details">Product Details</string>
    <string name="add_evaluation">Add Evaluation</string>
    <string name="product_details_label">Product Details</string>
    <string name="product_features">Product Features</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="free_shipping_when_buying_with_2000_0_l_e_or_more">Free Shipping when buying with 2000.0 L.E or more</string>
    <string name="_0_0">0.0</string>
    <string name="related_products">Related Products</string>
    <string name="not_available_sliders">Not available</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="no_products_added_to_the_cart_yet">No products added to the cart yet</string>
    <string name="add">Add</string>
    <string name="my_addresses">My Addresses</string>
    <string name="edit">Edit</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favorites">My favorites</string>
    <string name="my_wallet">My Wallet</string>
    <string name="points_of_reward">Points of Reward</string>
    <string name="common_questions">Common Questions</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="order_number">Order Number</string>
    <string name="order_time">Ordered at</string>
    <string name="order_status">Order Status</string>
    <string name="order_details">Order Details</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_edit_success">Profile edited successfully</string>
    <string name="error_loading_orders">Error during loading orders..Try again ??</string>
    <string name="no_available_orders">No available orders</string>
    <string name="success">Success</string>
</resources>