<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notifications_icon"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_icon"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter_icon"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cart_icon"
        android:icon="@drawable/ic_cart2"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />

</menu>